# sensor_board

./: .clang-tidy  .clang-uml  .devcontainer  .gitattributes  .gitignore  .gitmodules  .vscode  CMakeLists.txt  README.md  cspell.json
3d_party/: CMakeLists.txt  lv_conf.h
diagrams/: Gui.graphml  Gui.puml  Sensor.graphml  Sensor.puml  blinky.graphml  blinky.puml  test.graphml  test.puml
src/: .clang-format  main.cpp  system_manager.cpp  system_manager.hpp  system_signals.hpp
src/_common/: common.cpp  common.hpp  io_functions.cpp
src/_common/error/: error.cpp  error.hpp
src/application/: application_manager.cpp  application_manager.hpp  application_signals.hpp
src/application/blinky/: blinky.cpp  blinky.hpp
src/application/gui/: gui.cpp  gui.hpp  i_gui.hpp
src/application/sensor/: sensor.cpp  sensor.hpp
src/application/startup/: startup.cpp  startup.hpp
src/device/: device_manager.cpp  device_manager.hpp
src/device/display/: i_display.hpp  icb_display.hpp
src/device/display/ssd1306/: ssd1306.cpp  ssd1306.hpp
src/device/sensors/: i_sensor.hpp  icb_sensor.hpp
src/device/sensors/aht10/: aht10.cpp  aht10.hpp
src/device/sensors/test/: test.cpp  test.hpp
src/device/serial_commander/: i_serial_commander.hpp  icb_serial_commander.hpp  serial_commander.cpp  serial_commander.hpp
src/device/user_indication/: i_user_indication.hpp  user_indication.cpp  user_indication.hpp
src/hardware/: hardware_manager.cpp  hardware_manager.hpp
src/hardware/driver/i2c/: i2c.cpp  i2c.hpp  i_i2c.hpp  icb_i2c.hpp
src/hardware/driver/interrupt_dispatcher/: icb_interrupt.hpp  interrupt.cpp  interrupt.hpp
src/hardware/driver/output_pin/: i_output_pin.hpp  output_pin.cpp  output_pin.hpp
src/hardware/driver/spi/: i_spi.hpp  spi.cpp  spi.hpp
src/hardware/driver/uart/: i_uart.hpp  uart.cpp  uart.hpp
src/hardware/linker/: blinky.ld
src/hardware/output_pin/: i_output_pin.hpp  output_pin.cpp  output_pin.hpp
src/hardware/platform/: CMakeLists.txt  device.cmake  stm32l4xx_hal_conf.h  stm32l4xx_it.c
src/hardware/qpcpp_callbacks/: qpcpp_callbacks.cpp  qpcpp_callbacks.hpp  qpcpp_error.cpp
src/hardware/serial_commander/: i_serial_commander.hpp  icb_serial_commander.hpp  serial_commander.cpp  serial_commander.hpp
